# nanotorch

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
discovery/: 01_usecase_problems_and_ideal_solutions.md  02_detail_current_problem_usecase_one.md  03_pre_pytorch_problems_really_did_exist.md  04_detail_20_usecases_prepytorch.md  05_task_breakup_with_tshirt_sizing_usecases.md  06_break_tasks_into_size_one.md  07_prepytorch_implementation_plan.md  08_architecture_defense_multirole.md  09_challenging_plan_with_constraints.md  10_high_level_product_vision.md  11_additional_constraints_space.md  12_sprint_zero_scope_and_deliverables.md  13_integration_usecases_and_test_types.md  14_learning_rule_loss_param_config.md  15_all_tests_in_increasing_complexity.md  16_uv_vs_poetry_common_usecases.md  17_catchy_name_for_our_project.md  18_learning_rule_options_by_complexity.md  19_next_logical_step_nanotorch_project.md  20_support_training_without_gradient_function.md  21_native_visualization_support.md
instructions/: 01_save_outputs_in_discovery_folder.md  02_filenames_should_have_monotonic_numbers.md  03_discovery_only_goes_in_discovery.md  04_stop_pytorch_assumptions_thought_experiment.md  05_lets_go_start_tdd.md  06_use_uv_or_poetry_for_project.md  07_comment_rich_source_and_tests.md  10_scenario_registry_and_plots.md
notebooks/: step_through_training.ipynb
scripts/: export_notebook_html.py  plot_eps_demo.py  plot_scenarios.py
tests/: conftest.py  test_integration_constant_target.py  test_integration_finite_difference.py  test_integration_multi_point_no_bias.py  (+6 more)
(+6 files in other folders)
