[project]
name = "nanotorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = []

[project.scripts]
nanotorch-plot = "nanotorch.plotting:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
]
